[package]
name = "curry-macro"
version = "0.1.0"
authors = ["Kevin Li <kevinli020508@gmail.com>"]
edition = "2018"
description = "Have fun currying using Rust's native closure syntax."
keywords = ["curry", "closure", "function", "fp"]
license = "MIT"
repository = "https://github.com/AlienKevin/curry-macro"

[dependencies]
